added up/down arrow handling

--- a/lib/reader_web/live/reader_live/index.html.heex
+++ b/lib/reader_web/live/reader_live/index.html.heex
@@ -1,5 +1,5 @@
 <div class="m-10" phx-window-keydown="press">
-  <h1>Reader</h1>
+  <h1>Reader!</h1>
 
   <!-- Words pane -->
   <div class="h-40 m-10 justify-center">
