--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,100 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+  
+  .color1 {color: #e9d8ff;}
+  .color2 {color: #fffbff;}
+  .color3 {color: #1d1832;}
+  .color4 {color: #78767c;}
+  .color5 {color: #e2e2e2;}
+  
+  img {
+    width: 50px;
+  }
+  
+  .header {
+    min-height: 100px;
+    background-color: #1d1832;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .logo {
+    max-width: 150px;
+    margin-left: 2.5rem;
+  }
+  
+  .main-menu {
+    width: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  
+  .reader-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  
+  /* The side navigation menu */
+  .sidenav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 0; /* changes with script */
+    height: 70px;
+    margin-top: -9px;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    background-color: #1d1832; /* Black*/
+    color:white;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav img {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    right: 18px;
+    font-size: 28px;
+    margin-left: 50px;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }  
