--- a/lib/reader_web/components/layouts/root.html.heex
+++ b/lib/reader_web/components/layouts/root.html.heex
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css">
     <script src="https://cdn.tailwindcss.com/3.2.4"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body class="bg-white antialiased">
     <%= @inner_content %>
