--- a/lib/reader_web/live/reader_live/index.html.heex
+++ b/lib/reader_web/live/reader_live/index.html.heex
@@ -10,57 +10,41 @@
   </section>
 </header>
 
-<%!-- Side Nav --%>
-<section>
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <span class="material-symbols-rounded">space_bar</span>Start/Stop
-            <span class="material-symbols-rounded">arrow_upward_alt</span>Speed Up
-            <span class="material-symbols-rounded">arrow_downward_alt</span>Slow Down
-            <span class="material-symbols-rounded">arrow_left_alt</span>Rewind
-            <span class="material-symbols-rounded">arrow_right_alt</span>Forward
-            <span></span>ESC Exit
-        </div>
-        <section class="reader-menu my-[10px] ml-[2.5rem]">
-            <h1><span onclick="openNav()">Instructions |</span>
-            <span>Upload |</span>
-            <span>Another Menu Item |</span></h1>
-        </section>
-    </section>
+<%!-- Sub Menu --%>
+<section class="reader-menu my-[10px] ml-[2.5rem]">
+  <h1><span onclick="openNav()">Instructions |</span>
+  <span>Upload |</span>
+  <span>Another Menu Item |</span></h1>
+</section>
 
-<div class="m-10" phx-window-keydown="press">
-  <h1>Reader!</h1>
-
-  <!-- Words pane -->
-  <div class="h-40 m-10 justify-center">
-    <div class="text-gray-300 text-sm"><%= @last %></div>
-    <div class="text-black text-xl"><%= @current %></div>
-    <div class="text-gray-300 text-sm"><%= @next %></div>
-  </div>
-
-  <!-- Controls -->
-  <div class="h-10 m-10">
-    <div>
-      <button phx-click="next" class="btn btn-blue">Next</button>
+<%!-- Reader Area --%>
+<section class="mx-80">
+<!-- Reader Pane -->
+  <section class="flex flex-row justify-center h-64 mt-12 mb-4 border-8 border-[#1d1832] rounded-[2.5rem] bg-[steelblue]">
+    <div class="flex flex-col justify-center mx-80">
+      <div class="text-gray-300 text-4sm"><%= @last %></div>
+      <div class="text-black text-5xl"><%= @current %></div>
+      <div class="text-gray-300 text-4sm"><%= @next %></div>
     </div>
-  </div>
+  </section>
 
-  <!-- Settings -->
-  <div class="h-10 m-10">
+<!-- Info Area -->
+  <section class="flex flex-row justify-center mb-4">
     <div>
-      <p><b>Paused</b>: <%= not @auto %></p>
-      <p><b>WPM</b>: <%= @wpm %></p>
+      <b>Paused</b>: <%= not @auto %>
+      <b>WPM</b>: <%= @wpm %>
     </div>
-  </div>
-</div>
+  </section>
 
-<%!-- Side NAV script --%>
-<script>/* Set the width of the side navigation to max avilable */
-    function openNav() {
-      document.getElementById("mySidenav").style.width = "100%";
-    }
-    
-    /* Set the width of the side navigation to 0 */
-    function closeNav() {
-      document.getElementById("mySidenav").style.width = "0";
-    }</script>
+<!-- Controls -->
+  <section class="flex flex-row justify-evenly">
+    <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">space_bar</i>Start/Stop</button>
+    <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">arrow_upward_alt</i>Speed Up</button>
+    <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">arrow_downward_alt</i>Slow Down</button>
+    <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">arrow_left_alt</i>Rewind</button>
+    <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">arrow_right_alt</i>Forward</button>
+  </section>
+</section>
+
+<%!-- Bindings --%>
+<div class="m-10" phx-window-keydown="press"></div>
