added handling for all buttons

--- a/lib/reader_web/live/reader_live/index.html.heex
+++ b/lib/reader_web/live/reader_live/index.html.heex
@@ -38,10 +38,10 @@
 
 <!-- Controls -->
   <section class="flex flex-row justify-evenly">
-    <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">space_bar</i>Start/Stop</button>
-    <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">arrow_upward_alt</i>Speed Up</button>
-    <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">arrow_downward_alt</i>Slow Down</button>
-    <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">arrow_left_alt</i>Rewind</button>
+    <button class="controls-button" phx-click="space"><i class="material-symbols-rounded">space_bar</i>Start/Stop</button>
+    <button class="controls-button" phx-click="up"><i class="material-symbols-rounded">arrow_upward_alt</i>Speed Up</button>
+    <button class="controls-button" phx-click="down"><i class="material-symbols-rounded">arrow_downward_alt</i>Slow Down</button>
+    <button class="controls-button" phx-click="previous"><i class="material-symbols-rounded">arrow_left_alt</i>Rewind</button>
     <button class="controls-button" phx-click="next"><i class="material-symbols-rounded">arrow_right_alt</i>Forward</button>
   </section>
 </section>
