--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -46,3 +46,29 @@
   min-width: 150px;
   min-height: 50px;
 }
+
+.material-symbols-rounded {
+  vertical-align: bottom;
+}
+
+.book-index {
+  min-height: 450px;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.book-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 50px;
+  border-bottom: 1px solid;
+}
+
+.book-words {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 200px;
+}
